tests/ui/invalid_pymethod_names.stderr
error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:11:14
   |
11 |     #[getter(number)]
   |              ^^^^^^

error: `name` may only be specified once
  --> tests/ui/invalid_pymethod_names.rs:18:12
   |
18 |     #[pyo3(name = "bar")]
   |            ^^^^

error: `name` not allowed with `#[new]`
  --> tests/ui/invalid_pymethod_names.rs:24:19
   |
24 |     #[pyo3(name = "makenew")]
   |                   ^^^^^^^^^

error: `name` not allowed with `#[init]`
  --> tests/ui/invalid_pymethod_names.rs:31:19
   |
31 |     #[pyo3(name = "makeinit")]
   |                   ^^^^^^^^^^

error: expected ident or string literal for property name
  --> tests/ui/invalid_pymethod_names.rs:38:14
   |
38 |     #[getter(1)]
   |              ^

error: expected `#[getter(name)]` to set the name
  --> tests/ui/invalid_pymethod_names.rs:44:14
   |
44 |     #[getter = 1]
   |              ^
